# MI-REPO

./: .gitignore  README.md  main.py  pyproject.toml
src/mi_repo/: __init__.py  app.py
